@@ -1,13 +1,13 @@
 package com.signly.contract.infrastructure.mapper;
 
+import com.signly.common.util.UlidGenerator;
 import com.signly.contract.domain.model.*;
+import com.signly.contract.infrastructure.entity.ContractJpaEntity;
+import com.signly.contract.infrastructure.entity.SignatureEntity;
 import com.signly.template.domain.model.TemplateId;
 import com.signly.user.domain.model.UserId;
-import com.signly.contract.infrastructure.entity.ContractJpaEntity;
-import com.signly.contract.infrastructure.entity.SignatureJpaEntity;
 import org.springframework.stereotype.Component;
 
-import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
@@ -15,28 +15,29 @@ public class ContractEntityMapper {
 
     public ContractJpaEntity toEntity(Contract contract) {
         ContractJpaEntity entity = new ContractJpaEntity(
-            contract.getId().getValue(),
-            contract.getCreatorId().getValue(),
-            contract.getTemplateId() != null ? contract.getTemplateId().getValue() : null,
-            contract.getTitle(),
-            contract.getContent().getValue(),
-            null,
-            contract.getFirstParty().getName(),
-            contract.getFirstParty().getEmail(),
-            contract.getFirstParty().getOrganizationName(),
-            contract.getSecondParty().getName(),
-            contract.getSecondParty().getEmail(),
-            contract.getSecondParty().getOrganizationName(),
-            contract.getStatus(),
-            contract.getSignToken().value(),
-            contract.getExpiresAt(),
-            contract.getPresetType()
+                contract.getId().value(),
+                contract.getCreatorId().value(),
+                contract.getTemplateId() != null ? contract.getTemplateId().value() : null,
+                contract.getTitle(),
+                contract.getContent().content(),
+                null,
+                contract.getFirstParty().name(),
+                contract.getFirstParty().email(),
+                contract.getFirstParty().organizationName(),
+                contract.getSecondParty().name(),
+                contract.getSecondParty().email(),
+                contract.getSecondParty().organizationName(),
+                contract.getStatus(),
+                contract.getSignToken().value(),
+                contract.getExpiresAt(),
+                contract.getPresetType()
         );
 
+        entity.setPdfPath(contract.getPdfPath());
 
-        List<SignatureJpaEntity> signatureEntities = contract.getSignatures().stream()
-            .map(this::toSignatureEntity)
-            .collect(Collectors.toList());
+        var signatureEntities = contract.getSignatures().stream()
+                .map(this::toSignatureEntity)
+                .toList();
 
         signatureEntities.forEach(entity::addSignature);
 
@@ -44,63 +45,70 @@ public class ContractEntityMapper {
     }
 
     public Contract toDomain(ContractJpaEntity entity) {
-        UserId creatorId = UserId.of(entity.getCreatorId());
-        TemplateId templateId = entity.getTemplateId() != null ? TemplateId.of(entity.getTemplateId()) : null;
-        ContractId contractId = ContractId.of(entity.getId());
-        ContractContent content = ContractContent.of(entity.getContent());
+        var creatorId = UserId.of(entity.getCreatorId());
+        var templateId = entity.getTemplateId() != null ? TemplateId.of(entity.getTemplateId()) : null;
+        var contractId = ContractId.of(entity.getId());
+        var content = ContractContent.of(entity.getContent());
 
-        PartyInfo firstParty = PartyInfo.of(
-            entity.getFirstPartyName(),
-            entity.getFirstPartyEmail(),
-            entity.getFirstPartyOrganization()
+        var firstParty = PartyInfo.of(
+                entity.getFirstPartyName(),
+                entity.getFirstPartyEmail(),
+                entity.getFirstPartyOrganization()
         );
 
-        PartyInfo secondParty = PartyInfo.of(
-            entity.getSecondPartyName(),
-            entity.getSecondPartyEmail(),
-            entity.getSecondPartyOrganization()
+        var secondParty = PartyInfo.of(
+                entity.getSecondPartyName(),
+                entity.getSecondPartyEmail(),
+                entity.getSecondPartyOrganization()
         );
 
-        List<Signature> signatures = entity.getSignatures().stream()
-            .map(this::toDomainSignature)
-            .collect(Collectors.toList());
+        var signatures = entity.getSignatures().stream()
+                .map(this::toDomainSignature)
+                .collect(Collectors.toList());
 
         SignToken signToken = SignToken.of(entity.getSignToken());
 
         return Contract.restore(
-            contractId,
-            creatorId,
-            templateId,
-            entity.getTitle(),
-            content,
-            firstParty,
-            secondParty,
-            entity.getStatus(),
-            signatures,
-            signToken,
-            entity.getExpiresAt(),
-            entity.getPresetType(),
-            entity.getCreatedAt(),
-            entity.getUpdatedAt()
+                contractId,
+                creatorId,
+                templateId,
+                entity.getTitle(),
+                content,
+                firstParty,
+                secondParty,
+                entity.getStatus(),
+                signatures,
+                signToken,
+                entity.getExpiresAt(),
+                entity.getPresetType(),
+                entity.getPdfPath(),
+                entity.getCreatedAt(),
+                entity.getUpdatedAt()
         );
     }
 
-    private SignatureJpaEntity toSignatureEntity(Signature signature) {
-        return new SignatureJpaEntity(
-            signature.getSignerEmail(),
-            signature.getSignerName(),
-            signature.getSignedAt(),
-            signature.getSignatureData(),
-            signature.getIpAddress()
+    private SignatureEntity toSignatureEntity(Signature signature) {
+        return new SignatureEntity(
+                UlidGenerator.generate(),
+                null, // contract will be set later
+                signature.signerEmail(),
+                signature.signerName(),
+                signature.signatureData(),
+                signature.signedAt(),
+                signature.ipAddress(),
+                signature.deviceInfo(),
+                signature.signaturePath()
         );
     }
 
-    private Signature toDomainSignature(SignatureJpaEntity entity) {
+    private Signature toDomainSignature(SignatureEntity entity) {
         return Signature.create(
-            entity.getSignerEmail(),
-            entity.getSignerName(),
-            entity.getSignatureData(),
-            entity.getIpAddress()
+                entity.getSignerEmail(),
+                entity.getSignerName(),
+                entity.getSignatureData(),
+                entity.getIpAddress(),
+                entity.getDeviceInfo(),
+                entity.getSignaturePath()
         );
     }
 
